--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,13 @@
 <resources>
     <color name="colorPrimary">#FAFAFA</color>
     <color name="colorPrimaryDark">#000000</color>
+    <color name="colorTransparency">#61000000</color>
     <color name="colorAccent">#4CAF50</color>
     <color name="green">#4CAF50</color>
     <color name="red">#E91E63</color>
+    <color name="grey">#9FA2A4</color>
     <color name="orange">#FF9800</color>
+    <color name="status_bar_color">#40000000</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
