Adding circular Reveal

--- a/app/src/main/res/navigation/order_navigation.xml
+++ b/app/src/main/res/navigation/order_navigation.xml
@@ -13,5 +13,13 @@
         <argument
             android:name="companyId"
             app:argType="string" />
+        <action
+            android:id="@+id/action_detailFragment_to_orderDetailFragment"
+            app:destination="@id/orderDetailFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/orderDetailFragment"
+        android:name="com.axelfernandez.deliverylavalle.ui.OrderDetailFragment"
+        android:label="order_detail_fragment"
+        tools:layout="@layout/order_detail_fragment" />
 </navigation>
