--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -68,6 +68,22 @@
 
             </androidx.cardview.widget.CardView>
             <TextView
+                android:id="@+id/text_view_category_of"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:fontFamily="sans-serif-black"
+                tools:text="@string/category_of"
+                />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/category_rv"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:nestedScrollingEnabled="false"
+                android:layout_height="wrap_content"/>
+            <TextView
                 android:id="@+id/text_view_product_of"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
