Add detail order and total

--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.detail.DetailFragment">
+    tools:context=".ui.companyDetail.DetailFragment">
 
 
     <include layout="@layout/app_bar"/>
