--- a/app/src/main/res/layout/order_detail_fragment.xml
+++ b/app/src/main/res/layout/order_detail_fragment.xml
@@ -3,11 +3,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.OrderDetailFragment">
-
-    <TextView
+    android:orientation="vertical"
+    tools:context=".ui.orderDetail.OrderDetailFragment">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
+
+        <include layout="@layout/app_bar"/>
+
+        <TextView
+            android:id="@+id/order_detail_text_view_company_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textSize="24sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:fontFamily="sans-serif-black"
+            android:text="Mi Pedido:"/>
+
+        <include layout="@layout/order_detail_company_item"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_order_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:textSize="24sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/total"
+                android:layout_width="0dp" />
+            <TextView
+                android:id="@+id/order_detail_total"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:textAlignment="textEnd"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:textSize="24sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:fontFamily="sans-serif-black"
+                tools:text="$850"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+    <Button
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Continuar Pedido"
+        android:textColor="@color/colorPrimary"
+        android:background="@color/green"/>
 </FrameLayout>
