--- a/app/src/main/res/navigation/order_navigation.xml
+++ b/app/src/main/res/navigation/order_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/detailFragment"
-        android:name="com.axelfernandez.deliverylavalle.ui.detail.DetailFragment"
+        android:name="com.axelfernandez.deliverylavalle.ui.companyDetail.DetailFragment"
         android:label="detail_fragment"
         tools:layout="@layout/detail_fragment" >
         <argument
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/orderDetailFragment"
-        android:name="com.axelfernandez.deliverylavalle.ui.OrderDetailFragment"
+        android:name="com.axelfernandez.deliverylavalle.ui.orderDetail.OrderDetailFragment"
         android:label="order_detail_fragment"
         tools:layout="@layout/order_detail_fragment" />
 </navigation>
