--- a/app/src/main/res/layout/order_detail_detail_item.xml
+++ b/app/src/main/res/layout/order_detail_detail_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="40dp"
         android:layout_weight="1"
         tools:text="X2"
+        android:textSize="16sp"
         android:gravity="center"
         android:layout_gravity="left|center_vertical" />
 
@@ -18,6 +19,7 @@
         android:id="@+id/order_detail_detail_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textSize="16sp"
         android:layout_weight="4"
         tools:text="Pizza lomo bien bien copada."
         android:layout_gravity="left|center_vertical" />
@@ -27,6 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textSize="16sp"
         tools:text="$360"
         android:gravity="center"
         android:layout_gravity="right|center_vertical" />
