--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -4,11 +4,12 @@
     android:layout_height="wrap_content"
     xmlns:tool="http://schemas.android.com/tools"
     >
-    <com.google.android.material.appbar.AppBarLayout
+    <Toolbar
         android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:id="@+id/toolbar"
         android:background="@color/colorPrimary"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_height="?actionBarSize">
+        android:backgroundTint="@color/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,5 +36,5 @@
                 android:text="@string/lavalle"/>
 
         </LinearLayout>
-    </com.google.android.material.appbar.AppBarLayout>
+    </Toolbar>
 </androidx.constraintlayout.widget.ConstraintLayout>
