--- a/app/src/main/res/layout/address_list_fragment.xml
+++ b/app/src/main/res/layout/address_list_fragment.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.addressList.AddressList">
+    <ProgressBar
+        android:id="@+id/addres_list_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        />
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
