--- a/app/src/main/res/layout/order_select_payment_and_adress_fragment.xml
+++ b/app/src/main/res/layout/order_select_payment_and_adress_fragment.xml
@@ -30,8 +30,12 @@
         android:textColor="@color/colorPrimaryDark"
         android:fontFamily="sans-serif-black"
         android:text="@string/payment_method"/>
+    <include layout="@layout/banner_phishing"
+        android:id="@+id/phishing_banner_1"
+        android:visibility="gone"/>
     <RadioGroup
         android:id="@+id/radioGroup"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </RadioGroup>
