--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccent">#4CAF50</color>
     <color name="green">#4CAF50</color>
     <color name="red">#E91E63</color>
+    <color name="warning">#F1B9C0</color>
     <color name="grey">#9FA2A4</color>
     <color name="orange">#FF9800</color>
     <color name="status_bar_color">#40000000</color>
