--- a/app/src/main/res/layout/order_detail_company_item.xml
+++ b/app/src/main/res/layout/order_detail_company_item.xml
@@ -35,6 +35,25 @@
                 android:textColor="@color/colorPrimaryDark"
                 tools:text="Una rotizeria re copada con nombre largo"
                 />
+            <TextView
+                android:id="@+id/order_detail_company_adresss"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textSize="15sp"
+                android:fontFamily="sans-serif-black"
+                tools:text="Calle siempre viva"
+                />
+            <TextView
+                android:id="@+id/order_detail_company_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="sans-serif-black"
+                tools:text="2613450276"
+                />
+
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
