--- a/app/src/main/res/layout/order_select_payment_and_adress_fragment.xml
+++ b/app/src/main/res/layout/order_select_payment_and_adress_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.OrderSelectPayment.OrderSelectPaymentAndAddress">
+    tools:context=".ui.orderSelectPayment.OrderSelectPaymentAndAddress">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,8 +20,24 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/payment_and_delivery_rv"
+        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/retry_in_local_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:textSize="18sp"
+        android:fontFamily="sans-serif-black"
+        android:text="@string/retry_delivery_local"
+        />
+    <include
+        android:id="@+id/banner_local"
+        android:visibility="gone"
+        layout="@layout/banner_local_delivery"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
