--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="withe">#FFFFFF</color>
     <color name="colorPrimary">#FAFAFA</color>
     <color name="colorPrimaryDark">#000000</color>
+    <color name="black">#000000</color>
     <color name="colorTransparency">#61000000</color>
     <color name="colorAccent">#4CAF50</color>
     <color name="green">#4CAF50</color>
@@ -9,6 +11,7 @@
     <color name="warning">#F1B9C0</color>
     <color name="grey">#9FA2A4</color>
     <color name="orange">#FF9800</color>
+    <color name="blue">#1E88E5</color>
     <color name="status_bar_color">#40000000</color>
 
     <color name="black_overlay">#66000000</color>
