--- a/app/src/main/res/layout/company_item.xml
+++ b/app/src/main/res/layout/company_item.xml
@@ -11,19 +11,22 @@
         android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:elevation="4dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <ImageView
+            android:layout_width="0dp"
             android:id="@+id/company_item_image"
-            android:layout_marginTop="10dp"
-            android:layout_width="130dp"
+            android:layout_margin="10dp"
+            android:layout_weight="3"
             android:layout_height="130dp"
-            android:layout_marginBottom="10dp"
             tools:src="@drawable/screen3"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="7"
             android:layout_height="match_parent"
-            android:layout_marginLeft="140dp"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/company_item_title"
@@ -55,11 +58,35 @@
                     android:id="@+id/methods_rv"/>
             </LinearLayout>
 
-
         </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif-black"
+                android:textColor="@color/green"
+                android:textSize="20sp"
+                tools:text="4.5" />
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:numStars="1"
+                android:isIndicator="true"
+                android:rating="1"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 </FrameLayout>
