--- a/app/src/main/res/layout/item_products.xml
+++ b/app/src/main/res/layout/item_products.xml
@@ -11,9 +11,13 @@
         android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:elevation="4dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <LinearLayout
-                android:layout_width="250dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="8"
                 android:layout_marginLeft="18dp"
                 android:orientation="vertical">
                 <TextView
@@ -79,16 +83,15 @@
             </LinearLayout>
 
 
-        <ImageView
-            android:id="@+id/item_product_image"
-            android:layout_gravity="right"
-            android:layout_marginTop="10dp"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginBottom="10dp"
-            tools:src="@drawable/screen3"/>
-
-
-
+            <ImageView
+                android:id="@+id/item_product_image"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:layout_marginTop="10dp"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_marginBottom="10dp"
+                tools:src="@drawable/screen3"/>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
