--- a/app/src/main/res/layout/category_company_item.xml
+++ b/app/src/main/res/layout/category_company_item.xml
@@ -15,8 +15,8 @@
             android:background="@drawable/circle"/>
         <ImageView
             android:id="@+id/item_company_category_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             />
 
