--- a/app/src/main/res/layout/order_status_detail_fragment.xml
+++ b/app/src/main/res/layout/order_status_detail_fragment.xml
@@ -111,7 +111,7 @@
                     android:layout_margin="20dp"
                     android:background="@color/green"
                     android:text="@string/send_review"
-                    android:textColor="@color/withe" />
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <TextView
