--- a/app/src/main/res/menu/trash_menu.xml
+++ b/app/src/main/res/menu/trash_menu.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/trash_icon"
-        app:showAsAction="always"
+        android:showAsAction="always"
+        android:orderInCategory="100"
         android:icon="@drawable/ic_baseline_delete_24"
-        android:title="@string/delete" />
+        android:title="@string/delete"
+        tools:ignore="AppCompatResource" />
 </menu>
